Try again with Jitpack. Experiment with setting options.